--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             <iframe name='tela' id="tela" src="home.html" frameborder="0"></iframe>
         </section>
         <section id="redes-sociais">
-            <a href="" target="tela"><img class="logo" src="imagens/logo-home.jpg" alt="home"></a><br>
+            <a href="home.html" target="tela"><img class="logo" src="imagens/logo-home.jpg" alt="home"></a><br>
+            <a href="" target="tela"><img class="logo" src="imagens/logo-youtube.jpg" alt="youtube"></a><br>
             <a href="" target="tela"><img class="logo" src="imagens/logo-facebook.jpg" alt=""></a><br>
             <a href="" target="tela"><img class="logo" src="imagens/logo-github.jpg" alt=""></a><br>
             <a href="" target="tela"><img class="logo" src="imagens/logo-instagram.jpg" alt=""></a><br>
