--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css">
-    <title>Document</title>
+    <title>social</title>
 </head>
 <body>
     <main>
@@ -14,11 +14,11 @@
         </section>
         <section id="redes-sociais">
             <a href="home.html" target="tela"><img class="logo" src="imagens/logo-home.jpg" alt="home"></a><br>
-            <a href="" target="tela"><img class="logo" src="imagens/logo-youtube.jpg" alt="youtube"></a><br>
-            <a href="" target="tela"><img class="logo" src="imagens/logo-facebook.jpg" alt=""></a><br>
-            <a href="" target="tela"><img class="logo" src="imagens/logo-github.jpg" alt=""></a><br>
-            <a href="" target="tela"><img class="logo" src="imagens/logo-instagram.jpg" alt=""></a><br>
-            <a href="" target="tela"><img class="logo" src="imagens/logo-twitter.jpg" alt=""></a>
+            <a href="youtube.html" target="tela"><img class="logo" src="imagens/logo-youtube.jpg" alt="youtube"></a><br>
+            <a href="face.html" target="tela"><img class="logo" src="imagens/logo-facebook.jpg" alt=""></a><br>
+            <a href="github.html" target="tela"><img class="logo" src="imagens/logo-github.jpg" alt=""></a><br>
+            <a href="insta.html" target="tela"><img class="logo" src="imagens/logo-instagram.jpg" alt=""></a><br>
+            <a href="twitter.html" target="tela"><img class="logo" src="imagens/logo-twitter.jpg" alt=""></a>
         </section>
     </main>
 </body>
